--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 46c4f12
-	trimbase = 
+	trim = imu_transformer
+	base = ca4c111
+	trimbase = 46c4f12
 	parent = upstream
 	previous = 8933b43
