--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 476538f
-	trimbase = 
+	trim = imu_pipeline
+	base = 4772e2f
+	trimbase = 476538f
 	parent = upstream
 	previous = 8933b43
