--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 18a0da2
-	trimbase = 
+	trim = imu_processors
+	base = d397eba
+	trimbase = 18a0da2
 	parent = upstream
 	previous = 8933b43
