--- a/package.xml
+++ b/package.xml
@@ -1,27 +1,24 @@
 <package>
   <name>imu_pipeline</name>
-  <version>0.1.3</version>
+  <version>0.2.0</version>
   <description>imu_pipeline</description>
-  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
 
   <license>BSD</license>
+  <license>GPL</license>
 
   <url type="website">http://ros.org/wiki/imu_pipeline</url>
   <url type="bugtracker">https://github.com/ros-perception/imu_pipeline/issues</url>
   <url type="repository">https://github.com/ros-perception/imu_pipeline</url>
 
-  <author>Chad Rockey</author>
+  <author email="chadrockey@gmail.com">Chad Rockey</author>
+  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>tf</run_depend>
+  <run_depend>imu_processors</run_depend>
+  <run_depend>imu_transformer</run_depend>
+
+  <export>
+    <metapackage/>
+  </export>
 </package>
