--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cae98c4
+	base = a73b00d
 	trimbase = 
 	parent = debian/indigo/imu_transformer
-	previous = 
+	previous = cae98c4
