--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d397eba
+	base = 7899ac4
 	trimbase = 
 	parent = release/indigo/imu_processors
-	previous = 
+	previous = d397eba
