--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3aae05e
+	base = 02e73a7
 	trimbase = 
 	parent = debian/indigo/imu_processors
-	previous = 
+	previous = 3aae05e
