--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4772e2f
+	base = 3ae2418
 	trimbase = 
 	parent = release/indigo/imu_pipeline
-	previous = 
+	previous = 4772e2f
