--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 41c7192
+	base = f9814cc
 	trimbase = 
 	parent = rpm/indigo/imu_pipeline
-	previous = 
+	previous = 41c7192
