--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ca4c111
+	base = 94c9201
 	trimbase = 
 	parent = release/indigo/imu_transformer
-	previous = 
+	previous = ca4c111
