--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccf491a
+	base = 803b8f7
 	trimbase = 
 	parent = rpm/indigo/imu_transformer
-	previous = 
+	previous = ccf491a
