--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccf491a
+	base = fef6ae2
 	trimbase = 
 	parent = rpm/indigo/imu_transformer
-	previous = 
+	previous = ccf491a
