--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38791be
+	base = 50f3bc9
 	trimbase = 
 	parent = rpm/indigo/imu_processors
-	previous = 
+	previous = 38791be
