--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = a48a76d
-	trimbase = 
+	base = a4048dc
+	trimbase = a48a76d
 	parent = upstream
 	previous = 65fe5e8
