--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = b48b2bb
-	trimbase = 
+	base = c44aa0f
+	trimbase = b48b2bb
 	parent = upstream
 	previous = 65fe5e8
