--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = 196cc96
-	trimbase = 
+	base = 0f2b3fa
+	trimbase = 196cc96
 	parent = upstream
 	previous = 65fe5e8
