--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["Chad Rockey", "chadrockey@gmail.com"], "0.1.3": ["Chad Rockey", "chadrockey@gmail.com"], "0.2.0": ["Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
+{"0.1.1": ["Chad Rockey", "chadrockey@gmail.com"], "0.1.3": ["Chad Rockey", "chadrockey@gmail.com"], "0.2.1": ["Paul Bovbel", "pbovbel@clearpathrobotics.com"], "0.2.0": ["Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
