--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.0-0": ["Fri Jan 30 2015", "Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
+{"0.2.1-0": ["Wed Feb 04 2015", "Paul Bovbel", "pbovbel@clearpathrobotics.com"], "0.2.0-0": ["Fri Jan 30 2015", "Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
