--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = 7e0e912
-	trimbase = 
+	base = 8b8f3e6
+	trimbase = 7e0e912
 	parent = upstream
 	previous = e4d99bd
