--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = 14520cf
-	trimbase = 
+	base = c15346c
+	trimbase = 14520cf
 	parent = upstream
 	previous = e4d99bd
