--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = 3922c7b
-	trimbase = 
+	base = c9ecade
+	trimbase = 3922c7b
 	parent = upstream
 	previous = e4d99bd
