--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = beebd4e
-	trimbase = 
+	trim = imu_pipeline
+	base = 7bf5411
+	trimbase = beebd4e
 	parent = upstream
 	previous = e4d99bd
