--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4c18b02
-	trimbase = 
+	trim = imu_transformer
+	base = 1e9f3f3
+	trimbase = 4c18b02
 	parent = upstream
 	previous = e4d99bd
