--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8834993
-	trimbase = 
+	trim = imu_processors
+	base = 7ea0e8d
+	trimbase = 8834993
 	parent = upstream
 	previous = e4d99bd
