--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3f38e23
+	base = 2bafc02
 	trimbase = 
 	parent = debian/kinetic/imu_processors
-	previous = 
+	previous = 3f38e23
