--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e9f3f3
+	base = 946acad
 	trimbase = 
 	parent = release/kinetic/imu_transformer
-	previous = 
+	previous = 1e9f3f3
