--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a402efa
+	base = bd754f2
 	trimbase = 
 	parent = debian/kinetic/imu_transformer
-	previous = 
+	previous = a402efa
