--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d84768c
+	base = 417dfea
 	trimbase = 
 	parent = debian/kinetic/imu_pipeline
-	previous = 
+	previous = d84768c
