--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35c3edb
+	base = 63eb0d5
 	trimbase = 
 	parent = debian/kinetic/imu_processors
-	previous = 
+	previous = 35c3edb
