--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f2681c
+	base = 987b248
 	trimbase = 
 	parent = debian/kinetic/imu_transformer
-	previous = 
+	previous = 7f2681c
