--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f5e174f
+	base = f8b746b
 	trimbase = 
 	parent = debian/kinetic/imu_pipeline
-	previous = 
+	previous = f5e174f
