--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ea0e8d
+	base = d7ef6b6
 	trimbase = 
 	parent = release/kinetic/imu_processors
-	previous = 
+	previous = 7ea0e8d
