--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d855ed
+	base = b2ba644
 	trimbase = 
 	parent = rpm/kinetic/imu_processors
-	previous = 
+	previous = 7d855ed
