--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 93edc53
+	base = a315330
 	trimbase = 
 	parent = rpm/kinetic/imu_transformer
-	previous = 
+	previous = 93edc53
