--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7bf5411
+	base = 3959e68
 	trimbase = 
 	parent = release/kinetic/imu_pipeline
-	previous = 
+	previous = 7bf5411
