--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d74bd8b
+	base = 1dc9706
 	trimbase = 
 	parent = rpm/kinetic/imu_pipeline
-	previous = 
+	previous = d74bd8b
