--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1d68da8
-	trimbase = 
+	trim = imu_pipeline
+	base = d4d134f
+	trimbase = 1d68da8
 	parent = upstream
 	previous = e4d99bd
