--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7ea443e
-	trimbase = 
+	trim = imu_transformer
+	base = 60c6f58
+	trimbase = 7ea443e
 	parent = upstream
 	previous = e4d99bd
