--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fac9981
-	trimbase = 
+	trim = imu_processors
+	base = b12bc1d
+	trimbase = fac9981
 	parent = upstream
 	previous = e4d99bd
