--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b12bc1d
+	base = 53107a1
 	trimbase = 
 	parent = release/jade/imu_processors
-	previous = 
+	previous = b12bc1d
