--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31ee66d
+	base = d312b2a
 	trimbase = 
 	parent = debian/jade/imu_processors
-	previous = 
+	previous = 31ee66d
