--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e148b30
+	base = 65f0515
 	trimbase = 
 	parent = debian/jade/imu_pipeline
-	previous = 
+	previous = e148b30
