--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60c6f58
+	base = 31cac71
 	trimbase = 
 	parent = release/jade/imu_transformer
-	previous = 
+	previous = 60c6f58
