--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5dd2d2
+	base = d26f3a7
 	trimbase = 
 	parent = debian/jade/imu_transformer
-	previous = 
+	previous = e5dd2d2
