--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 275073f
+	base = 1ddba36
 	trimbase = 
 	parent = rpm/jade/imu_processors
-	previous = 
+	previous = 275073f
