--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4d134f
+	base = be010ed
 	trimbase = 
 	parent = release/jade/imu_pipeline
-	previous = 
+	previous = d4d134f
