--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4402ad
+	base = 8431fba
 	trimbase = 
 	parent = rpm/jade/imu_pipeline
-	previous = 
+	previous = a4402ad
