--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b292cf3
+	base = dac400a
 	trimbase = 
 	parent = rpm/jade/imu_transformer
-	previous = 
+	previous = b292cf3
