--- a/imu_pipeline/package.xml
+++ b/imu_pipeline/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>imu_pipeline</name>
-  <version>0.2.2</version>
+  <version>0.2.3</version>
   <description>imu_pipeline</description>
 
   <license>BSD</license>
@@ -12,6 +12,7 @@
 
   <author email="chadrockey@gmail.com">Chad Rockey</author>
   <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
+  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
