--- a/imu_processors/package.xml
+++ b/imu_processors/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>imu_processors</name>
-  <version>0.2.2</version>
+  <version>0.2.3</version>
   <description>Processors for sensor_msgs::Imu data</description>
 
   <license>BSD</license>
@@ -11,6 +11,7 @@
 
   <author email="chadrockey@gmail.com">Chad Rockey</author>
   <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
+  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
