--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = 015fe44
-	trimbase = 
+	base = 70906d0
+	trimbase = 015fe44
 	parent = upstream
 	previous = 84c2c64
