--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = ecb5dd6
-	trimbase = 
+	base = 12ed1a2
+	trimbase = ecb5dd6
 	parent = upstream
 	previous = 84c2c64
