--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = d8210fe
-	trimbase = 
+	base = 035f948
+	trimbase = d8210fe
 	parent = upstream
 	previous = 84c2c64
