--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = 3216914
-	trimbase = 
+	base = 52d00a5
+	trimbase = 3216914
 	parent = upstream
 	previous = 84c2c64
