--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = 6caf923
-	trimbase = 
+	base = 67f250b
+	trimbase = 6caf923
 	parent = upstream
 	previous = 84c2c64
