--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = b97ed93
-	trimbase = 
+	base = 3bc35b9
+	trimbase = b97ed93
 	parent = upstream
 	previous = 84c2c64
