--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cf2f341
-	trimbase = 
+	trim = imu_transformer
+	base = 77aa4ef
+	trimbase = cf2f341
 	parent = upstream
 	previous = 84c2c64
