--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c915bc4
-	trimbase = 
+	trim = imu_pipeline
+	base = b99d25e
+	trimbase = c915bc4
 	parent = upstream
 	previous = 84c2c64
