--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fc9029c
-	trimbase = 
+	trim = imu_processors
+	base = 88bd70a
+	trimbase = fc9029c
 	parent = upstream
 	previous = 84c2c64
