--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 88bd70a
+	base = 662b908
 	trimbase = 
 	parent = release/lunar/imu_processors
-	previous = 
+	previous = 88bd70a
