--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 577a0f4
+	base = 836eec7
 	trimbase = 
 	parent = debian/lunar/imu_processors
-	previous = 
+	previous = 577a0f4
