--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b99d25e
+	base = d3d3f10
 	trimbase = 
 	parent = release/lunar/imu_pipeline
-	previous = 
+	previous = b99d25e
