--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 01d5549
+	base = 57c6ed1
 	trimbase = 
 	parent = debian/lunar/imu_pipeline
-	previous = 
+	previous = 01d5549
