--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 77aa4ef
+	base = 0ea07b1
 	trimbase = 
 	parent = release/lunar/imu_transformer
-	previous = 
+	previous = 77aa4ef
