--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 651e42e
+	base = 2be5a83
 	trimbase = 
 	parent = debian/lunar/imu_transformer
-	previous = 
+	previous = 651e42e
