--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c5d6d7b
+	base = 7a15a1d
 	trimbase = 
 	parent = debian/lunar/imu_processors
-	previous = 
+	previous = c5d6d7b
