--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f3ce6a6
+	base = 1feb245
 	trimbase = 
 	parent = debian/lunar/imu_pipeline
-	previous = 
+	previous = f3ce6a6
