--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd74518
+	base = 2009582
 	trimbase = 
 	parent = debian/lunar/imu_transformer
-	previous = 
+	previous = dd74518
