--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b517dff
-	trimbase = 
+	trim = imu_transformer
+	base = 76daf06
+	trimbase = b517dff
 	parent = upstream
 	previous = 84c2c64
