--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 606312b
-	trimbase = 
+	trim = imu_pipeline
+	base = b390a34
+	trimbase = 606312b
 	parent = upstream
 	previous = 84c2c64
