--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c080cd4
-	trimbase = 
+	trim = imu_processors
+	base = 3641214
+	trimbase = c080cd4
 	parent = upstream
 	previous = 84c2c64
