--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ebefee1
+	base = 90e4bba
 	trimbase = 
 	parent = debian/melodic/imu_transformer
-	previous = 
+	previous = ebefee1
