--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b390a34
+	base = d4da7de
 	trimbase = 
 	parent = release/melodic/imu_pipeline
-	previous = 
+	previous = b390a34
