--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f3fed3
+	base = 8b20d8d
 	trimbase = 
 	parent = debian/melodic/imu_pipeline
-	previous = 
+	previous = 4f3fed3
