--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13facf3
+	base = 769e694
 	trimbase = 
 	parent = debian/melodic/imu_processors
-	previous = 
+	previous = 13facf3
