--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 762861d
+	base = e75a528
 	trimbase = 
 	parent = debian/melodic/imu_transformer
-	previous = 
+	previous = 762861d
