--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c901af
+	base = 267c580
 	trimbase = 
 	parent = debian/melodic/imu_pipeline
-	previous = 
+	previous = 3c901af
