--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74a8a63
+	base = fc850c4
 	trimbase = 
 	parent = debian/melodic/imu_processors
-	previous = 
+	previous = 74a8a63
