--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 76daf06
+	base = 76dcca8
 	trimbase = 
 	parent = release/melodic/imu_transformer
-	previous = 
+	previous = 76daf06
