--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 76306c4
+	base = ffbf652
 	trimbase = 
 	parent = rpm/melodic/imu_transformer
-	previous = 
+	previous = 76306c4
