--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9acfcba
+	base = c20775c
 	trimbase = 
 	parent = rpm/melodic/imu_pipeline
-	previous = 
+	previous = 9acfcba
