--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3641214
+	base = f9ee8a6
 	trimbase = 
 	parent = release/melodic/imu_processors
-	previous = 
+	previous = 3641214
