--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7bddaae
+	base = 523c609
 	trimbase = 
 	parent = rpm/melodic/imu_processors
-	previous = 
+	previous = 7bddaae
