--- a/imu_transformer/CMakeLists.txt
+++ b/imu_transformer/CMakeLists.txt
@@ -1,11 +1,10 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(imu_transformer)
 
 find_package(catkin REQUIRED COMPONENTS
   message_filters
   nodelet
   roscpp
-  roslaunch
   sensor_msgs
   geometry_msgs
   tf2
@@ -32,6 +31,7 @@ add_executable(imu_transformer_node src/imu_transformer_node.cpp)
 target_link_libraries(imu_transformer_node ${catkin_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
+  find_package(roslaunch REQUIRED)
   roslaunch_add_file_check(launch)
 endif()
 
