--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 944c26a
-	trimbase = 
+	trim = imu_pipeline
+	base = a8c74b7
+	trimbase = 944c26a
 	parent = upstream
 	previous = aa252b8
