--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2f13b0b
-	trimbase = 
+	trim = imu_transformer
+	base = 23f491e
+	trimbase = 2f13b0b
 	parent = upstream
 	previous = aa252b8
