--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2f7ae6d
-	trimbase = 
+	trim = imu_processors
+	base = b617e36
+	trimbase = 2f7ae6d
 	parent = upstream
 	previous = aa252b8
