--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9f8a3a6
+	base = 6739316
 	trimbase = 
 	parent = debian/noetic/imu_transformer
-	previous = 
+	previous = 9f8a3a6
