--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b617e36
+	base = 8c47f1b
 	trimbase = 
 	parent = release/noetic/imu_processors
-	previous = 
+	previous = b617e36
