--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2166a30
+	base = 61fdaa6
 	trimbase = 
 	parent = debian/noetic/imu_processors
-	previous = 
+	previous = 2166a30
