--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55f87d9
+	base = e3b1980
 	trimbase = 
 	parent = debian/noetic/imu_transformer
-	previous = 
+	previous = 55f87d9
