--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d129258
+	base = df6ba0f
 	trimbase = 
 	parent = debian/noetic/imu_processors
-	previous = 
+	previous = d129258
