--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6952424
+	base = ef4c33d
 	trimbase = 
 	parent = debian/noetic/imu_pipeline
-	previous = 
+	previous = 6952424
