--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0746cf8
+	base = 4e86b5e
 	trimbase = 
 	parent = rpm/noetic/imu_transformer
-	previous = 
+	previous = 0746cf8
