--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 023b797
+	base = b2dcb8f
 	trimbase = 
 	parent = rpm/noetic/imu_processors
-	previous = 
+	previous = 023b797
