--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8c74b7
+	base = 40ad58d
 	trimbase = 
 	parent = release/noetic/imu_pipeline
-	previous = 
+	previous = a8c74b7
