--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fb20e84
+	base = 1323110
 	trimbase = 
 	parent = rpm/noetic/imu_pipeline
-	previous = 
+	previous = fb20e84
