--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = e86ee89
-	trimbase = 
+	base = 82f3843
+	trimbase = e86ee89
 	parent = upstream
 	previous = aa252b8
