--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = c5e839c
-	trimbase = 
+	base = 26d5941
+	trimbase = c5e839c
 	parent = upstream
 	previous = aa252b8
