--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = dc50003
-	trimbase = 
+	base = bf07424
+	trimbase = dc50003
 	parent = upstream
 	previous = aa252b8
