--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.0-1": ["Thu Jun 04 2020", "Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
+{"0.3.0-2": ["Thu Jun 04 2020", "Paul Bovbel", "pbovbel@clearpathrobotics.com"], "0.3.0-1": ["Thu Jun 04 2020", "Paul Bovbel", "pbovbel@clearpathrobotics.com"]}
