--- a/imu_transformer/package.xml
+++ b/imu_transformer/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>imu_transformer</name>
-  <version>0.3.0</version>
+  <version>0.3.1</version>
   <description>Node/nodelet combination to transform sensor_msgs::Imu data from one frame into another.</description>
 
   <license>GPL</license>
@@ -29,6 +29,7 @@
   <exec_depend>tf</exec_depend>
 
   <test_depend>roslaunch</test_depend>
+  <test_depend>tf2_geometry_msgs</test_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelets.xml"/>
