--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = d368b08
-	trimbase = 
+	base = 304fb0a
+	trimbase = d368b08
 	parent = upstream
 	previous = 852266b
