--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = 8dbf46b
-	trimbase = 
+	base = bff5f7d
+	trimbase = 8dbf46b
 	parent = upstream
 	previous = 852266b
