--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = 80ac64d
-	trimbase = 
+	base = d9df331
+	trimbase = 80ac64d
 	parent = upstream
 	previous = 852266b
