--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES imu_transformer_nodelet
-  CATKIN_DEPENDS roscpp message_filters nodelet sensor_msgs tf2 tf2_ros geometry_msgs
+  CATKIN_DEPENDS roscpp message_filters nodelet sensor_msgs tf2 tf2_ros geometry_msgs topic_tools
 )
 
 include_directories(
@@ -33,6 +33,11 @@ target_link_libraries(imu_transformer_node ${catkin_LIBRARIES})
 if(CATKIN_ENABLE_TESTING)
   find_package(roslaunch REQUIRED)
   roslaunch_add_file_check(launch)
+
+  find_package(tf2_geometry_msgs REQUIRED)
+  include_directories(${tf2_geometry_msgs_INCLUDE_DIRS})
+  catkin_add_gtest(test_imu_transforms test/test_imu_transforms.cpp)
+  target_link_libraries(test_imu_transforms ${catkin_LIBRARIES} ${tf2_geometry_msgs_LIBRARIES})
 endif()
 
 install(TARGETS imu_transformer_node imu_transformer_nodelet
