--- a/imu_transformer/package.xml
+++ b/imu_transformer/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>imu_transformer</name>
-  <version>0.2.3</version>
+  <version>0.2.4</version>
   <description>Node/nodelet combination to transform sensor_msgs::Imu data from one frame into another.</description>
 
   <license>GPL</license>
@@ -16,28 +16,20 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>message_filters</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>roslaunch</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf2</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_depend>tf2_sensor_msgs</build_depend>
-  <build_depend>topic_tools</build_depend>
+  <depend>geometry_msgs</depend>
+  <depend>nodelet</depend>
+  <depend>message_filters</depend>
+  <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_sensor_msgs</depend>
+  <depend>topic_tools</depend>
 
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>message_filters</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>roslaunch</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>tf2</run_depend>
-  <run_depend>tf2_ros</run_depend>
-  <run_depend>tf2_sensor_msgs</run_depend>
-  <run_depend>topic_tools</run_depend>
+  <exec_depend>tf</exec_depend>
+
+  <test_depend>roslaunch</test_depend>
+  <test_depend>tf2_geometry_msgs</test_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelets.xml"/>
