--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_transformer
-	base = 229174c
-	trimbase = 
+	base = e542283
+	trimbase = 229174c
 	parent = upstream
 	previous = 12e21fd
