--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_pipeline
-	base = 3d4d047
-	trimbase = 
+	base = fb3238e
+	trimbase = 3d4d047
 	parent = upstream
 	previous = 12e21fd
