--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = imu_processors
-	base = 86b60d9
-	trimbase = 
+	base = 6c1c677
+	trimbase = 86b60d9
 	parent = upstream
 	previous = 12e21fd
